Not final version

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -111,6 +111,7 @@
 
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/recordCardView"
                 android:layout_width="500dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/search_container"
@@ -261,6 +262,12 @@
 
 
             </androidx.cardview.widget.CardView>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_below="@id/recordCardView"
+                android:id="@+id/recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
 
         </RelativeLayout>
