--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,21 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.google.android.material.bottomappbar.BottomAppBar
-        android:id="@+id/bottomAppBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom">
 
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottomNavigationView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:menu="@menu/bottom_toolbar"
-            android:layout_marginEnd="16dp"
-            android:background="@android:color/transparent"/>
-
-    </com.google.android.material.bottomappbar.BottomAppBar>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
@@ -29,8 +15,7 @@
         android:src="@drawable/ic_add_white"
         android:tint="@android:color/white"
         app:tint="@android:color/white"
-        android:backgroundTint="@color/purple_200"
-        app:layout_anchor="@id/bottomAppBar" />
+        android:backgroundTint="@color/purple_200" />
 
     <ScrollView
         android:layout_width="match_parent"
