--- a/app/src/main/res/layout/new_main.xml
+++ b/app/src/main/res/layout/new_main.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_height="wrap_content"
+    android:layout_width="wrap_content">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -19,6 +21,17 @@
 
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/fab2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_done"
+                    android:tint="@android:color/white"
+                    app:tint="@android:color/white"
+                    android:backgroundTint="@color/purple_200"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentBottom="true"/>
 
 
                 <androidx.appcompat.widget.Toolbar
@@ -53,15 +66,8 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/toolbar">
 
-                    <Button
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:id="@+id/save"
-                        android:text="SAVE"
-                        android:layout_centerHorizontal="true"/>
 
                     <TextView
-                        android:layout_below="@+id/save"
                         android:id="@+id/datelabel"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -222,6 +228,6 @@
     </ScrollView>
 
 
-</layout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
