--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,38 +26,38 @@
         android:textSize="20sp"
         android:textStyle="bold" />
 
-    <RelativeLayout
-        android:id="@+id/search_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/header_title"
-        android:padding="10dp">
+<!--    <RelativeLayout-->
+<!--        android:id="@+id/search_container"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_below="@id/header_title"-->
+<!--        android:padding="10dp">-->
 
-        <Button
-            android:id="@+id/search"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:backgroundTint="@color/purple_200"
-            android:text="Search" />
+<!--&lt;!&ndash;        <Button&ndash;&gt;-->
+<!--&lt;!&ndash;            android:id="@+id/search"&ndash;&gt;-->
+<!--&lt;!&ndash;            android:layout_width="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;            android:layout_height="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;            android:layout_alignParentEnd="true"&ndash;&gt;-->
+<!--&lt;!&ndash;            android:backgroundTint="@color/purple_200"&ndash;&gt;-->
+<!--&lt;!&ndash;            android:text="Search" />&ndash;&gt;-->
 
-        <EditText
-            android:id="@+id/record"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="-11dp"
-            android:layout_toStartOf="@id/search"
-            android:hint="Search for record..."
-            android:maxLines="1"
-            android:singleLine="true" />
+<!--&lt;!&ndash;        <EditText&ndash;&gt;-->
+<!--&lt;!&ndash;            android:id="@+id/record"&ndash;&gt;-->
+<!--&lt;!&ndash;            android:layout_width="match_parent"&ndash;&gt;-->
+<!--&lt;!&ndash;            android:layout_height="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;            android:layout_marginEnd="-11dp"&ndash;&gt;-->
+<!--&lt;!&ndash;            android:layout_toStartOf="@id/search"&ndash;&gt;-->
+<!--&lt;!&ndash;            android:hint="Search for record..."&ndash;&gt;-->
+<!--&lt;!&ndash;            android:maxLines="1"&ndash;&gt;-->
+<!--&lt;!&ndash;            android:singleLine="true" />&ndash;&gt;-->
 
-    </RelativeLayout>
+<!--    </RelativeLayout>-->
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/search_container" />
+        android:layout_below="@id/header_title" />
 
     <TextView
         android:id="@+id/empty_view"
