--- a/app/src/main/res/layout/detail_main.xml
+++ b/app/src/main/res/layout/detail_main.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
 <!--    <data>-->
@@ -22,6 +23,16 @@
 
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                style="@style/ThemeDetail"
+                android:layout_height="wrap_content"
+                app:title="Details of Your Record"
+                android:background="@color/purple_200"
+                app:navigationIcon="@drawable/ic_back"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
 
             <!--
@@ -60,7 +71,7 @@
                 android:layout_below="@id/painPower_holder">
 
                 <TextView
-
+                    android:id="@+id/painPower_second"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
@@ -77,6 +88,7 @@
 
                 <TextView
 
+                    android:id="@+id/notes_detail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="left"
@@ -91,11 +103,11 @@
                 android:id="@+id/date_holder"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/toolbar"
 
                 >
 
                 <TextView
-
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="16sp"
@@ -110,7 +122,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_marginEnd="175dp"
                     android:padding="16sp"
-                    android:textSize="16sp" />
+                    android:textSize="20sp" />
 
             </RelativeLayout>
 
@@ -166,20 +178,24 @@
                     android:layout_alignParentEnd="true"
                     android:layout_marginEnd="175dp"
                     android:padding="16sp"
-                    android:textSize="16sp" />
+                    android:textSize="20sp" />
 
             </RelativeLayout>
 
 
             <ImageView
-                android:id="@+id/painTypeImageView"
+                android:id="@+id/painTypeImageView_detail"
+                android:layout_below="@id/toolbar"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_alignBottom="@id/detail_holder"
                 android:layout_alignParentEnd="true"
-                android:layout_marginTop="-1dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="15dp"
                 android:layout_marginRight="16dp"
-                android:padding="16sp" />
+                android:layout_marginBottom="5dp"
+                android:adjustViewBounds="true"
+                app:shapeAppearanceOverlay="@style/roundedImage" />
 
 
         </RelativeLayout>
