--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,24 +7,16 @@
     android:layout_height="match_parent">
 
 
+
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/purple_200"
+        android:background="@color/navy_light_theme"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:title="Pain Journal" />
-
-    <TextView
-        android:id="@+id/header_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/toolbar"
-        android:gravity="center_horizontal"
-        android:padding="5sp"
-        android:text="Records"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        app:title="Records"
+        app:titleMarginStart="160dp"/>
 
 <!--    <RelativeLayout-->
 <!--        android:id="@+id/search_container"-->
@@ -57,7 +49,7 @@
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/header_title" />
+        android:layout_below="@id/toolbar" />
 
     <TextView
         android:id="@+id/empty_view"
@@ -76,9 +68,10 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_margin="16dp"
-        android:backgroundTint="@color/purple_200"
+        android:backgroundTint="@color/navy_light_theme"
         android:src="@drawable/ic_add_white"
         android:tint="@android:color/white"
+        app:borderWidth="0dp"
         app:tint="@android:color/white" />
 
 
