--- a/app/src/main/res/layout/detail_main.xml
+++ b/app/src/main/res/layout/detail_main.xml
@@ -156,7 +156,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="16sp"
-                    android:text="I had:"
+                    android:text="Power:"
                     android:textColor="@color/design_default_color_on_secondary"
                     android:textSize="20sp" />
 
@@ -174,7 +174,7 @@
             </RelativeLayout>
 
 
-            <com.google.android.material.imageview.ShapeableImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/painTypeImageView_detail"
                 android:layout_below="@id/toolbar"
                 android:layout_width="150dp"
@@ -184,10 +184,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="15dp"
                 android:layout_marginRight="16dp"
-                android:layout_marginBottom="5dp"
-                android:adjustViewBounds="true"
-                android:padding="10dp"
-                app:shapeAppearanceOverlay="@style/roundedImage" />
+                android:layout_marginBottom="5dp" />
 
 
         </RelativeLayout>
